feat: warn on soldeer.lock revision mismatch during build (#12366)
* feat: warn on soldeer.lock revision mismatch during build

* revert & use soldeer_core APIs for lockfile consistency checks

* delete wrong comment & remove unnecessary check &handle FailedIntegrity

* add check_foundry_lock_consistenc

* Update crates/forge/src/cmd/build.rs

* Fix lint

* warn when soldeer.lock exists but fails to parse

* add tests for soldeer.lock consistency warnings

* add warning for malformed foundry.lock and tests

* fix lockfile consistency tests

* remove soldeer.lock parse warning test (soldeer_core handles internally)

* test: add test for foundry.lock revision mismatch warning

---------

Co-authored-by: zerosnacks <95942363+zerosnacks@users.noreply.github.com>
Co-authored-by: Tempo AI <amp@tempo.xyz>
Co-authored-by: grandizzy <grandizzy.the.egg@gmail.com>
Co-authored-by: grandizzy <38490174+grandizzy@users.noreply.github.com>

--- a/crates/forge/Cargo.toml
+++ b/crates/forge/Cargo.toml
@@ -97,6 +97,7 @@ opener = "0.8"
 
 # soldeer
 soldeer-commands.workspace = true
+soldeer-core.workspace = true
 quick-junit = "0.5.2"
 
 [dev-dependencies]
