perf(forge): parallelize stateless fuzzing (#12713)
* feat(evm): SharedCorpus for multiple worker threads

* use SharedCorpus + CorpusWorker in InvariantExecutor

* remove CorpusManager

* feat: Master-Worker corpus basic setup

* worker_dir + last_sync_timestamp fields. Write corpus to worker/corpus

* feat: export worker corpus to master and import from sync dir

* fix: deser as tx_seq in import

* feat: calibrate - update the in_memory_corpus + history_map for entries that provided in new coverage

* docs

* feat: distribute corpus from master to workers

* sync

* cleanup: remove MasterCorpus

* integrate WorkerCorpus in existing sequential impls of fuzz and invariants

* cleanup: remove SharedCorpus and CorpusWorker

* feat(types): SharedFuzzState and FuzzWorker

* basic run_worker in FuzzExecutor

* rename found_counterexample to found_failure in SharedFuzzState and store the workers id that found the failure

* feat: track total_rejects in SharedFuzzState

* shared_state.increment_runs + only worker0 replays persisted failure and corpus

* feat: basic staggered corpus sync in run_worker

* feat: parallelize fuzz runs + aggregate results

* fix: derive seeds per worker

* fix: only increment runs for success cases + try_increment_runs atomically to prevent going over max_runs

* fix: run only 1 worker if replaying persisted failure

* fix: timed campaigns - introduce per worker timer

* fix: flaky try_increment_runs

* fix: expect_emit_test_should_fail - identify events only using cache when not in tokio

* fix: timer should be global to fit as many runs as possible

* fix: worker_runs = config.runs/ num_workers

* fix: should_not_shrink_fuzz_failure

* feat: propagate --jobs / threads to FuzzConfig to determine number of workers

* optimize aggregate results

* nit

* fix

* skip fuzzConfig.threads serialization + use placeholder for should_not_shrink_fuzz_failure

* fix tests

* feat: sync corpus metrics

* nit

* feat: surface failed_corpus_replays from mas

--- a/crates/evm/evm/Cargo.toml
+++ b/crates/evm/evm/Cargo.toml
@@ -56,3 +56,5 @@ indicatif.workspace = true
 serde_json.workspace = true
 serde.workspace = true
 uuid.workspace = true
+rayon.workspace = true
+tokio.workspace = true
