test(script): add integration test proving pending vs latest nonce difference
Added test that proves the core issue from #12683:
- Spawns anvil with no-mining mode
- Sends a transaction that stays in mempool
- Verifies `latest` returns 0 (ignoring mempool tx) - THE BUG
- Verifies `pending` returns 1 (accounts for mempool tx) - THE FIX

This demonstrates exactly why switching from `latest` to `pending`
prevents nonce collisions when there are pending transactions.

--- a/crates/script/Cargo.toml
+++ b/crates/script/Cargo.toml
@@ -59,3 +59,4 @@ thiserror.workspace = true
 [dev-dependencies]
 tempfile.workspace = true
 foundry-test-utils.workspace = true
+anvil.workspace = true
