feat(cast): use prestate tracer to speed up cast run
Use debug_traceTransaction prestate tracer to fetch accessed state
directly instead of replaying entire block. Falls back to block
replay if debug API is unavailable.

This optimization fetches the prestate (accounts and storage slots
accessed by the transaction) via the debug_traceTransaction RPC method.
When available, this is significantly faster than replaying all previous
transactions in the block.

Added `--no-prestate-tracer` flag to disable this optimization if needed.

Co-authored-by: dipanshuhappy <dipanshuhappy@gmail.com>

--- a/crates/cast/Cargo.toml
+++ b/crates/cast/Cargo.toml
@@ -46,6 +46,7 @@ alloy-provider = { workspace = true, features = [
     "ipc",
     "trace-api",
     "txpool-api",
+    "debug-api",
 ] }
 alloy-rlp.workspace = true
 alloy-rpc-types = { workspace = true, features = ["eth", "trace"] }
