--- a/crates/evm/evm/Cargo.toml
+++ b/crates/evm/evm/Cargo.toml
@@ -33,7 +33,7 @@ alloy-primitives = { workspace = true, features = [
     "arbitrary",
     "rlp",
 ] }
-alloy-rpc-types.workspace = true
+alloy-rpc-types = { workspace = true, features = ["trace"] }
 alloy-sol-types.workspace = true
 revm = { workspace = true, default-features = false, features = [
     "std",
