--- a/testdata/foundry.toml
+++ b/testdata/foundry.toml
@@ -59,4 +59,7 @@ polygon = "${RPC_POLYGON}"
 bsc = "${RPC_BSC}"
 avaxTestnet = "https://api.avax-test.network/ext/bc/C/rpc"
 moonbeam = "https://moonbeam-rpc.publicnode.com"
+polkadotTestnet = "https://eth-rpc-testnet.polkadot.io"
+kusama = "https://eth-rpc-kusama.polkadot.io"
+polkadot = "https://eth-rpc.polkadot.io"
 rpcEnvAlias = "${RPC_ENV_ALIAS}"
