--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,17 +76,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  release-docker:
-    name: Release Docker
-    needs: prepare
-    uses: ./.github/workflows/docker-publish.yml
-    permissions:
-      contents: read
-      id-token: write
-      packages: write
-    with:
-      tag_name: ${{ needs.prepare.outputs.tag_name }}
-
   release:
     permissions:
       id-token: write
@@ -338,7 +327,7 @@ jobs:
   issue:
     name: Open an issue
     runs-on: ubuntu-latest
-    needs: [prepare, release-docker, release, cleanup]
+    needs: [prepare, release, cleanup]
     if: failure()
     permissions:
       contents: read
