--- a/Cargo.toml
+++ b/Cargo.toml
@@ -278,7 +278,7 @@ foundry-compilers = { version = "0.19.14", default-features = false, features = 
     "rustls",
     "svm-solc",
 ] }
-foundry-fork-db = "0.21"
+foundry-fork-db = "0.22"
 solang-parser = { version = "=0.3.9", package = "foundry-solang-parser" }
 solar = { package = "solar-compiler", version = "=0.1.8", default-features = false }
 svm = { package = "svm-rs", version = "0.5", default-features = false, features = [
@@ -494,29 +494,29 @@ rexpect = { git = "https://github.com/rust-cli/rexpect", rev = "2ed0b1898d7edaf6
 # alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
 
 ## alloy-evm
-alloy-evm = { git = "https://github.com/alloy-rs/evm.git", rev = "1c8ff5a179e760517016ab4e4d5af1c4b5923594" }
-alloy-op-evm = { git = "https://github.com/alloy-rs/evm.git", rev = "1c8ff5a179e760517016ab4e4d5af1c4b5923594" }
+alloy-evm = { git = "https://github.com/alloy-rs/evm.git", rev = "94f937a805b8d017236a787e12aef0caee5674d9" }
+alloy-op-evm = { git = "https://github.com/alloy-rs/evm.git", rev = "94f937a805b8d017236a787e12aef0caee5674d9" }
 
 ## revm
-revm = { git = "https://github.com/bluealloy/revm.git", rev = "300efbf3e391e1796f5210cd4506508e385a55d2" }
-revm-bytecode = { git = "https://github.com/bluealloy/revm.git", rev = "300efbf3e391e1796f5210cd4506508e385a55d2" }
-revm-context = { git = "https://github.com/bluealloy/revm.git", rev = "300efbf3e391e1796f5210cd4506508e385a55d2" }
-revm-context-interface = { git = "https://github.com/bluealloy/revm.git", rev = "300efbf3e391e1796f5210cd4506508e385a55d2" }
-revm-database = { git = "https://github.com/bluealloy/revm.git", rev = "300efbf3e391e1796f5210cd4506508e385a55d2" }
-revm-database-interface = { git = "https://github.com/bluealloy/revm.git", rev = "300efbf3e391e1796f5210cd4506508e385a55d2" }
-revm-handler = { git = "https://github.com/bluealloy/revm.git", rev = "300efbf3e391e1796f5210cd4506508e385a55d2" }
-revm-inspector = { git = "https://github.com/bluealloy/revm.git", rev = "300efbf3e391e1796f5210cd4506508e385a55d2" }
-revm-interpreter = { git = "https://github.com/bluealloy/revm.git", rev = "300efbf3e391e1796f5210cd4506508e385a55d2" }
-revm-precompile = { git = "https://github.com/bluealloy/revm.git", rev = "300efbf3e391e1796f5210cd4506508e385a55d2" }
-revm-primitives = { git = "https://github.com/bluealloy/revm.git", rev = "300efbf3e391e1796f5210cd4506508e385a55d2" }
-revm-state = { git = "https://github.com/bluealloy/revm.git", rev = "300efbf3e391e1796f5210cd4506508e385a55d2" }
-op-revm = { git = "https://github.com/bluealloy/revm.git", rev = "300efbf3e391e1796f5210cd4506508e385a55d2" }
-revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors.git", rev = "9464524e7d983c8601ba7af3048cd60575dad6bd" }
+revm = { git = "https://github.com/bluealloy/revm.git", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
+revm-bytecode = { git = "https://github.com/bluealloy/revm.git", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
+revm-context = { git = "https://github.com/bluealloy/revm.git", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
+revm-context-interface = { git = "https://github.com/bluealloy/revm.git", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
+revm-database = { git = "https://github.com/bluealloy/revm.git", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
+revm-database-interface = { git = "https://github.com/bluealloy/revm.git", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
+revm-handler = { git = "https://github.com/bluealloy/revm.git", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
+revm-inspector = { git = "https://github.com/bluealloy/revm.git", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
+revm-interpreter = { git = "https://github.com/bluealloy/revm.git", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
+revm-precompile = { git = "https://github.com/bluealloy/revm.git", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
+revm-primitives = { git = "https://github.com/bluealloy/revm.git", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
+revm-state = { git = "https://github.com/bluealloy/revm.git", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
+op-revm = { git = "https://github.com/bluealloy/revm.git", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
+revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors.git", rev = "96cb8e551c17ac760e676473973a900fb4b5a62a" }
 
 ## foundry
 # foundry-block-explorers = { git = "https://github.com/foundry-rs/block-explorers.git", rev = "f5b46b2" }
 # foundry-compilers = { git = "https://github.com/foundry-rs/compilers.git", branch = "main" }
-foundry-fork-db = { git = "https://github.com/rakita/foundry-fork-db", branch = "staging" }
+foundry-fork-db = { git = "https://github.com/rakita/foundry-fork-db", rev = "f951f3c17253bcde94b9dbb53e527fac36a2be0b" }
 
 # solar
 solar = { package = "solar-compiler", git = "https://github.com/paradigmxyz/solar", rev = "530f129" }
