fix(forge-test): fix flamegraph gas inaccuracy issues

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -454,6 +454,8 @@ idna_adapter = "=1.1.0"
 [patch.crates-io]
 # https://github.com/rust-cli/rexpect/pull/106
 rexpect = { git = "https://github.com/rust-cli/rexpect", rev = "2ed0b1898d7edaf6a85bedbae71a01cc578958fc" }
+# TODO: Remove once actual `revm-insepctors` patched
+revm-inspectors = { git = "https://github.com/Philogy/revm-inspectors" } 
 
 ## alloy-core
 # alloy-dyn-abi = { path = "../../alloy-rs/core/crates/dyn-abi" }
