feat: add foundry-cli-markdown crate
Add a new crate for generating Markdown documentation from clap CLIs.
This is a fork of clap-markdown with the following enhancements:

- Support for grouped options by help heading (PR #48)
- Show environment variable names for arguments (PR #50)
- Add version information to generated Markdown (PR #52)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ members = [
     "crates/primitives/",
     "crates/script-sequence/",
     "crates/test-utils/",
+    "crates/cli-markdown/",
 ]
 resolver = "2"
 
