feat(cli): add hidden --markdown-help flag
Add a hidden --markdown-help flag to forge, cast, anvil, and chisel
that prints CLI reference documentation as Markdown and exits.

This uses the new foundry-cli-markdown crate to generate the output.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -256,6 +256,7 @@ forge-script-sequence = { path = "crates/script-sequence" }
 foundry-cheatcodes = { path = "crates/cheatcodes" }
 foundry-cheatcodes-spec = { path = "crates/cheatcodes/spec" }
 foundry-cli = { path = "crates/cli" }
+foundry-cli-markdown = { path = "crates/cli-markdown" }
 foundry-common = { path = "crates/common" }
 foundry-common-fmt = { path = "crates/common/fmt" }
 foundry-config = { path = "crates/config" }
