--- a/crates/verify/Cargo.toml
+++ b/crates/verify/Cargo.toml
@@ -41,6 +41,7 @@ regex = { workspace = true, default-features = false }
 yansi.workspace = true
 itertools.workspace = true
 url.workspace = true
+tokio = { workspace = true, features = ["time", "macros"] }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["macros"] }
