--- a/Cargo.toml
+++ b/Cargo.toml
@@ -496,29 +496,29 @@ rexpect = { git = "https://github.com/rust-cli/rexpect", rev = "2ed0b1898d7edaf6
 # alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
 
 ## alloy-evm
-alloy-evm = { git = "https://github.com/alloy-rs/evm.git", rev = "94f937a805b8d017236a787e12aef0caee5674d9" }
-alloy-op-evm = { git = "https://github.com/alloy-rs/evm.git", rev = "94f937a805b8d017236a787e12aef0caee5674d9" }
+alloy-evm = { git = "https://github.com/alloy-rs/evm.git", rev = "80e6a436ecade2b9bd950fd70bd0d6a45ef0a43e" }
+alloy-op-evm = { git = "https://github.com/alloy-rs/evm.git", rev = "80e6a436ecade2b9bd950fd70bd0d6a45ef0a43e" }
 
 ## revm
-revm = { git = "https://github.com/bluealloy/revm.git", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
-revm-bytecode = { git = "https://github.com/bluealloy/revm.git", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
-revm-context = { git = "https://github.com/bluealloy/revm.git", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
-revm-context-interface = { git = "https://github.com/bluealloy/revm.git", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
-revm-database = { git = "https://github.com/bluealloy/revm.git", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
-revm-database-interface = { git = "https://github.com/bluealloy/revm.git", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
-revm-handler = { git = "https://github.com/bluealloy/revm.git", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
-revm-inspector = { git = "https://github.com/bluealloy/revm.git", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
-revm-interpreter = { git = "https://github.com/bluealloy/revm.git", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
-revm-precompile = { git = "https://github.com/bluealloy/revm.git", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
-revm-primitives = { git = "https://github.com/bluealloy/revm.git", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
-revm-state = { git = "https://github.com/bluealloy/revm.git", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
-op-revm = { git = "https://github.com/bluealloy/revm.git", rev = "f3b74d4ff0c6c88a09ca281323a100257fa61ebf" }
-revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors.git", rev = "96cb8e551c17ac760e676473973a900fb4b5a62a" }
+revm = { git = "https://github.com/bluealloy/revm.git", rev = "6aa06829d2caa2aa38606ed22b83354a7a7ff98e" }
+revm-bytecode = { git = "https://github.com/bluealloy/revm.git", rev = "6aa06829d2caa2aa38606ed22b83354a7a7ff98e" }
+revm-context = { git = "https://github.com/bluealloy/revm.git", rev = "6aa06829d2caa2aa38606ed22b83354a7a7ff98e" }
+revm-context-interface = { git = "https://github.com/bluealloy/revm.git", rev = "6aa06829d2caa2aa38606ed22b83354a7a7ff98e" }
+revm-database = { git = "https://github.com/bluealloy/revm.git", rev = "6aa06829d2caa2aa38606ed22b83354a7a7ff98e" }
+revm-database-interface = { git = "https://github.com/bluealloy/revm.git", rev = "6aa06829d2caa2aa38606ed22b83354a7a7ff98e" }
+revm-handler = { git = "https://github.com/bluealloy/revm.git", rev = "6aa06829d2caa2aa38606ed22b83354a7a7ff98e" }
+revm-inspector = { git = "https://github.com/bluealloy/revm.git", rev = "6aa06829d2caa2aa38606ed22b83354a7a7ff98e" }
+revm-interpreter = { git = "https://github.com/bluealloy/revm.git", rev = "6aa06829d2caa2aa38606ed22b83354a7a7ff98e" }
+revm-precompile = { git = "https://github.com/bluealloy/revm.git", rev = "6aa06829d2caa2aa38606ed22b83354a7a7ff98e" }
+revm-primitives = { git = "https://github.com/bluealloy/revm.git", rev = "6aa06829d2caa2aa38606ed22b83354a7a7ff98e" }
+revm-state = { git = "https://github.com/bluealloy/revm.git", rev = "6aa06829d2caa2aa38606ed22b83354a7a7ff98e" }
+op-revm = { git = "https://github.com/bluealloy/revm.git", rev = "6aa06829d2caa2aa38606ed22b83354a7a7ff98e" }
+revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors.git", rev = "cc4f62d8c107b3d2dc42a220690a079cdfc8dfb1" }
 
 ## foundry
 # foundry-block-explorers = { git = "https://github.com/foundry-rs/block-explorers.git", rev = "f5b46b2" }
 # foundry-compilers = { git = "https://github.com/foundry-rs/compilers.git", branch = "main" }
-foundry-fork-db = { git = "https://github.com/rakita/foundry-fork-db", rev = "f951f3c17253bcde94b9dbb53e527fac36a2be0b" }
+foundry-fork-db = { git = "https://github.com/rakita/foundry-fork-db", branch = "staging" }
 
 # solar
 solar = { package = "solar-compiler", git = "https://github.com/paradigmxyz/solar", rev = "530f129" }
