--- a/Cargo.toml
+++ b/Cargo.toml
@@ -441,6 +441,7 @@ ethereum_ssz = "0.10"
 
 # Tempo
 tempo-primitives = { git = "https://github.com/tempoxyz/tempo", tag = "v1.0.0", default-features = false, features = ["serde"] }
+tempo-alloy = { git = "https://github.com/tempoxyz/tempo", tag = "v1.0.0", default-features = false }
 
 ## Pinned dependencies. Enabled for the workspace in crates/test-utils.
 
