feat: allow decoding external contracts

--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -64,6 +64,7 @@ reqwest.workspace = true
 semver.workspace = true
 serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
+tempfile.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tracing.workspace = true
